Few error fixes + cleanup repo

--- a/cell_tracking_hpc.ipynb
+++ b/cell_tracking_hpc.ipynb
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "4c49d05d-6b13-4847-941e-8e8b416fc958",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1095,7 @@
    ],
    "source": [
     "# Visualize the automatically generated train + val loss plot\n",
-    "train_val_img = mpimg.imread(f\"train_final_version_{best_opt}_lr{best_lr}_batch{best_batch_size}.jpg\")\n",
+    "train_val_img = mpimg.imread(f\"train_graphics/train_final_version_{best_opt}_lr{best_lr}_batch{best_batch_size}.jpg\")\n",
     "plt.imshow(train_val_img)\n",
     "plt.axis('off')\n",
     "plt.show()"
